services/servarr/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent
        ports:
        - containerPort: 8080
        - containerPort: 6881
          protocol: TCP
        - containerPort: 6881
          protocol: UDP
        volumeMounts:
        - mountPath: /config
          name: qbittorrent-config
        - mountPath: /downloads
          name: qbittorrent-downloads-nfs
      volumes:
      - name: qbittorrent-config
        persistentVolumeClaim:
          claimName:  qbittorrent-config-claim
      - name: qbittorrent-downloads-nfs
        nfs:
          server: 192.168.50.50
          path: /volume1/NAS/MediaLibrary/Downloads
          readOnly: false
