services/servarr/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: services
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
