services/servarr/qbittorrent/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://qbittorrent.test.local.hohepa.dev
    gethomepage.dev/group: Servarr
    gethomepage.dev/name: qBittorrent
    gethomepage.dev/icon: qbittorrent.png
    gethomepage.dev/app: qbittorrent
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: test-local-hohepa-dev-tls
